...
import { Divider } from '@rneui/themed';
import { Header } from '../../components/Header';
import AddressInput from '../../components/AddressInput';
import { GROUP_IO_BLUEWALLET } from '../../blue_modules/currency';
import { Action } from '../../components/types';
import ListItem, { PressableWrapper } from '../../components/ListItem';
import HeaderMenuButton from '../../components/HeaderMenuButton';
import { useSettings } from '../../hooks/context/useSettings';
import { getPreferredServer } from '@/src/blue_modules/blue-electrum/getPreferredServer';
import { ELECTRUM_HOST, ELECTRUM_SERVER_HISTORY, ELECTRUM_SSL_PORT, ELECTRUM_TCP_PORT } from '@/src/blue_modules/blue-electrum/constants';
import { hardcodedPeers, suggestedServers } from '@/src/blue_modules/blue-electrum/suggestedServers';
import { presentResetToDefaultsAlert } from '@/src/blue_modules/blue-electrum/presentResetToDefaultsAlert';
import { serverFeatures } from '@/src/blue_modules/blue-electrum/serverFeatures';
import { setDisabled } from '@/src/blue_modules/blue-electrum/setDisabled';
import { getConfig } from '@/src/blue_modules/blue-electrum/getConfig';
import { ElectrumServerItem } from './types/ElectrumServerItem';

type RouteProps = RouteProp<DetailViewStackParamList, 'ElectrumSettings'>;

const SET_PREFERRED_PREFIX = 'set_preferred_';

const ElectrumSettings: React.FC = () => {
  const { colors } = useTheme();
  const params = useRoute<RouteProps>().params;
...
            isLoading={isLoading}
          />
          <BlueSpacing20 />
          <View style={styles.portWrap}>
            <View style={[styles.inputWrap, stylesHook.inputWrap]}>
              <TextInput
                placeholder={loc.formatString(loc.settings.electrum_port, { example: '50001' })}
                value={sslPort?.toString() === '' || sslPort === undefined ? port?.toString() || '' : sslPort?.toString() || ''}
                onChangeText={text => {
                  const parsed = Number(text.trim());
                  if (Number.isNaN(parsed)) {
                    // Handle invalid input
                    if (sslPort === undefined) {
...
                placeholderTextColor="#81868e"
                underlineColorAndroid="transparent"
                autoCorrect={false}
                autoCapitalize="none"
                keyboardType="number-pad"
                inputAccessoryViewID={DismissKeyboardInputAccessoryViewID}
                testID="PortInput"
                onFocus={() => setIsAndroidNumericKeyboardFocused(true)}
                onBlur={() => setIsAndroidNumericKeyboardFocused(false)}
              />
            </View>
            <BlueText style={[styles.usePort, stylesHook.usePort]}>{loc.settings.use_ssl}</BlueText>
            <Switch
              testID="SSLPortInput"
              value={sslPort !== undefined}
              onValueChange={onSSLPortChange}
              disabled={host?.endsWith('.onion') || isLoading || host === '' || (port === undefined && sslPort === undefined)}
            />
          </View>
        </BlueCard>
        <BlueCard>
          <BlueSpacing20 />
          <Button
            showActivityIndicator={isLoading}
            disabled={isLoading || preferredServerIsEmpty}
            testID="Save"
            onPress={save}
            title={loc.settings.save}
          />
        </BlueCard>

        {Platform.select({
...
