appId: com.harry-expo.bluewallet
---
- tapOn: "Tools"

# Broadcast invalid transaction
- tapOn: 
    id: "Broadcast"
- tapOn:
    id: "TxHex"
- inputText:
    text: "invalid"
- tapOn: 
    id: "BroadcastButton"
- assertVisible: "OK"
- tapOn: "OK"
- runFlow: "../helpers/go-back.yaml"

# refresh list-items:
# - runFlow: "../helpers/go-back.yaml"
# - tapOn: "Tools"

# - extendedWaitUntil:
#     visible:
#         id: "IsItMyAddress"
#     timeout: 300000

# Check address ownership
- tapOn: 
    id: "IsItMyAddress"
- tapOn:
    id: "AddressInput"
- inputText:
    text: "bc1q063ctu6jhe5k4v8ka99qac8rcm2tzjjnuktyrl"
- hideKeyboard

- assertVisible:
    id: "CheckAddress"
- assertVisible: "Scan or import a file"
- tapOn: "Scan or import a file"
- assertVisible: "Cancel"
- tapOn: "Cancel"

- tapOn:
    id: "CheckAddress"
    enabled: true

- assertVisible: "None of the available wallets own the provided address."
- tapOn: "OK"

- runFlow: "../helpers/go-back.yaml"
- runFlow: "../helpers/go-back.yaml"
