appId: com.harry-expo.bluewallet
---
- tapOn: 
    id: "SettingsPrivacy"
- tapOn: 
    id: "ClipboardSwitch"
- tapOn: 
    id: "ClipboardSwitch"
- tapOn: 
    id: "QuickActionsSwitch"
- tapOn: 
    id: "QuickActionsSwitch"
- runFlow: "../helpers/go-back.yaml"
